(--enable-build=<type>): new switch

--- a/configure.in
+++ b/configure.in
@@ -20,6 +20,9 @@ AC_PROG_MAKE_SET
 AC_PROG_INSTALL
 AC_PROG_RANLIB
 
+# Are we in devel mode ?
+CHECK_BUILD_TYPE
+
 # checking for gtk
 AM_PATH_GTK(2.2.0,,AC_MSG_ERROR(Test for GTK failed. See the file 'INSTALL' for help.))
 
@@ -44,6 +47,7 @@ AC_SUBST(GTKADA_VERSION)
 AC_SUBST(GTKADA_MAJOR_VERSION)
 AC_SUBST(GTKADA_MINOR_VERSION)
 AC_SUBST(GTKADA_MICRO_VERSION)
+AC_SUBST(BUILD_TYPE)
 
 EXEC_PREFIX="$prefix"
 AC_SUBST(EXEC_PREFIX)
