(INSTALL_PROGRAM, INSTALL_SCRIPTS): new variables, moved from src/Makefile.in,  since they are also needed for src/tools/Makefile.in now

--- a/src/Makefile.common.in
+++ b/src/Makefile.common.in
@@ -15,9 +15,11 @@ GTK_LIBS = @GTK_LIBS@
 HAVE_LIBGLADE = @HAVE_LIBGLADE@
 HAVE_OPENGL   = @HAVE_OPENGL@
 HAVE_GNOME    = @HAVE_GNOME@
-INSTALL       = @INSTALL@
-INSTALL_DATA  = @INSTALL_DATA@
-BUILD_TYPE    = @BUILD@
+INSTALL         = @INSTALL@
+INSTALL_DATA    = @INSTALL_DATA@
+INSTALL_PROGRAM = @INSTALL_PROGRAM@
+INSTALL_SCRIPT  = @INSTALL_SCRIPT@
+BUILD_TYPE      = @BUILD_TYPE@
 
 GPR_BUILD=-XBUILD=${BUILD_TYPE} -XOPENGL=${HAVE_OPENGL} -XGNOME=${HAVE_GNOME} -XGLADE=${HAVE_LIBGLADE}
 
