--- a/src/glade/Makefile.in
+++ b/src/glade/Makefile.in
@@ -9,6 +9,13 @@ GPRFILE          = glade
 SRC_FILES        = ${LIBGLADE_OBJECTS}
 include ../Makefile.common
 
+## These cannot be shared in Makefile.common, since relative paths might be
+## generated for configure (../install-sh), or absolute paths (/usr/bin/install)
+INSTALL         = @INSTALL@
+INSTALL_DATA    = @INSTALL_DATA@
+INSTALL_PROGRAM = @INSTALL_PROGRAM@
+INSTALL_SCRIPT  = @INSTALL_SCRIPT@
+
 ifneq ($(HAVE_LIBGLADE),True)
 all:
 install:
