--- a/src/gnome/Makefile.in
+++ b/src/gnome/Makefile.in
@@ -8,6 +8,14 @@ GPRFILE       = gnome
 
 include ../Makefile.common
 
+## These cannot be shared in Makefile.common, since relative paths might be
+## generated for configure (../install-sh), or absolute paths (/usr/bin/install)
+INSTALL         = @INSTALL@
+INSTALL_DATA    = @INSTALL_DATA@
+INSTALL_PROGRAM = @INSTALL_PROGRAM@
+INSTALL_SCRIPT  = @INSTALL_SCRIPT@
+
+
 ifneq ($(HAVE_GNOME),True)
 all:
 install:
