--- a/src/tools/Makefile.in
+++ b/src/tools/Makefile.in
@@ -9,6 +9,13 @@ GNATMAKELDFLAGS = -largs -L../lib-obj -lgtkada $(GTK_LIBS)
 OBJ_DIR=obj
 include ../Makefile.common
 
+## These cannot be shared in Makefile.common, since relative paths might be
+## generated for configure (../install-sh), or absolute paths (/usr/bin/install)
+INSTALL         = @INSTALL@
+INSTALL_DATA    = @INSTALL_DATA@
+INSTALL_PROGRAM = @INSTALL_PROGRAM@
+INSTALL_SCRIPT  = @INSTALL_SCRIPT@
+
 all: force
 	${GNATMAKE} -Ptools ${GPR_BUILD} ${GNATMAKELDFLAGS}
 
