--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -2,7 +2,7 @@ all: dirs libs tools
 
 CFLAGS = -DG_DISABLE_ASSERT -DG_DISABLE_CHECKS -DG_DISABLE_CAST_CHECKS \
  -DGTK_DISABLE_DEPRECATED -DGSEAL_ENABLE -DGTK_DISABLE_SINGLE_INCLUDES \
- -DGTK_COMPILATION \
+ -DGDK_DISABLE_DEPRECATED \
  @CFLAGS@ -Wall @GTK_CFLAGS@ -I.. $(FPIC)
 
 GETTEXT_INTL=@GETTEXT_INTL@
