--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,9 +1,12 @@
 all: dirs libs tools
 
-CFLAGS = -DG_DISABLE_ASSERT -DG_DISABLE_CHECKS -DG_DISABLE_CAST_CHECKS \
+## This line restricts to the Gtk3 API. Comment it out to compile with Gtk2.
+RESTRICT_FLAGS = \
  -DGTK_DISABLE_DEPRECATED -DGSEAL_ENABLE -DGTK_DISABLE_SINGLE_INCLUDES \
- -DGDK_DISABLE_DEPRECATED \
- @CFLAGS@ -Wall @GTK_CFLAGS@ -I.. $(FPIC)
+ -DGDK_DISABLE_DEPRECATED
+
+CFLAGS = -DG_DISABLE_ASSERT -DG_DISABLE_CHECKS -DG_DISABLE_CAST_CHECKS \
+ @CFLAGS@ $(RESTRICT_FLAGS) -Wall @GTK_CFLAGS@ -I.. $(FPIC)
 
 GETTEXT_INTL=@GETTEXT_INTL@
 HAVE_GETTEXT=@HAVE_GETTEXT@
