--- a/Makefile.in
+++ b/Makefile.in
@@ -35,14 +35,14 @@ install:
 	@echo '------------------------------------------------------------------'
 
 
-GIR_FILES=contrib/Gtk-2.0.gir
-
 # Generate the binding automatically, through a python script
-# The list of files to generate is in contrib/binding.py
-
 generate: force
 	${RM} src/generated/*.ad?
-	python contrib/binding.py ${GIR_FILES} contrib/binding.xml
+	python contrib/binding.py \
+		--gir-file=contrib/Gtk-2.0.gir \
+		--xml-file=contrib/binding.xml \
+		--ada-output=src/generated/tmp.ada \
+		--c-output=src/misc_generated.c
 	cd src/generated; gnatchop -q -w tmp.ada
 
 clean-generic:
