--- a/Makefile.in
+++ b/Makefile.in
@@ -34,6 +34,10 @@ install:
 	@echo '--  update your PATH to include gtkada-config in it.            --'
 	@echo '------------------------------------------------------------------'
 
+.PHONY: docs
+docs:
+	$(MAKE) -C docs
+
 
 # Generate the binding automatically, through a python script
 generate: force
