Make support for gtkextra optional (configurable through  --enable-gtkextra, rather than by changing variables in Makefiles). GtkExtra still does not compile with gtk3, so unless they port it  upstream we might decide to remove support for it. It is disabled  by default in GtkAda-for-gtk3 L117-009

--- a/configure.in
+++ b/configure.in
@@ -32,6 +32,17 @@ AM_PANGO_UNDERLINE_ERROR
 ALL_LINGUAS="fr"
 AM_GNU_GETTEXT
 
+# Should we compile with gtkextra ?
+AC_MSG_CHECKING(for gtkextra)
+AC_ARG_ENABLE(gtkextra,
+  [AC_HELP_STRING(
+    [--enable-gtkextra],
+    [Build the gtkextra widgets])],
+  HAVE_GTKEXTRA=$enableval,
+  HAVE_GTKEXTRA=no)
+AC_MSG_RESULT($HAVE_GTKEXTRA)
+AC_SUBST(HAVE_GTKEXTRA)
+
 # try to find OpenGL if present
 AM_CHECK_OPENGL
 
