--- a/src/Makefile.common.in
+++ b/src/Makefile.common.in
@@ -16,10 +16,11 @@ MICRO    = @GTKADA_MICRO_VERSION@
 GTK_LIBS = @GTK_LIBS@
 HAVE_OPENGL   = @HAVE_OPENGL@
 HAVE_GNOME    = @HAVE_GNOME@
+HAVE_GTKEXTRA = @HAVE_GTKEXTRA@
 BUILD_TYPE      = @BUILD_TYPE@
 DEFAULT_LIBRARY_TYPE=@DEFAULT_LIBRARY_TYPE@
 
-GPR_BUILD=-XBUILD=${BUILD_TYPE} -XOPENGL=${HAVE_OPENGL} -XGNOME=${HAVE_GNOME}
+GPR_BUILD=-XBUILD=${BUILD_TYPE} -XOPENGL=${HAVE_OPENGL} -XEXTRA=${HAVE_GTKEXTRA} -XGNOME=${HAVE_GNOME}
 
 CP = cp -p -f
 ifeq ($(OS),Windows_NT)
