--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -26,26 +26,16 @@ SONAME        = libgtkada-$(MAJOR).$(MINOR)$(SO_EXT).$(MICRO)
 endif
 ARCHIVENAME   = libgtkada.a
 
-ifeq ($(GTKEXTRA_SUPPORT),yes)
-misc_extra = misc_extra.o
-c_extra_objects = ../gtkextra/obj/gtk*.o
-gtkextra_libs = gtkextra
-else
-misc_extra =
-c_extra_objects =
-gtkextra_libs =
-endif
-
 ifeq ($(GL_SUPPORT),yes)
 opengl_libs = opengl
 else
 opengl_libs =
 endif
 
-c_objects = misc.o ${misc_extra} misc_generated.o
+c_objects = misc.o misc_generated.o
 c_objects_dir= ${c_objects:%=${OBJ_DIR}/%}
 
-SRC_FILES=glib*.o gdk*.o gtk*.o pango*.o cairo*.o ${c_objects} ${c_extra_objects}
+SRC_FILES=glib*.o gdk*.o gtk*.o pango*.o cairo*.o ${c_objects}
 GTKADA_LIBS=
 EXTERNAL_LIBS=
 include Makefile.common
@@ -59,7 +49,7 @@ INSTALL_SCRIPT  = @INSTALL_SCRIPT@
 
 ## General and public targets
 
-libs: ada ${c_objects_dir} ${gtkextra_libs}
+libs: ada ${c_objects_dir}
 ifeq ($(BUILD_SHARED),yes)
 libs: ${OBJ_DIR}/$(SONAME)
 endif
@@ -67,6 +57,10 @@ ifeq ($(BUILD_STATIC),yes)
 libs: ${OBJ_DIR}/${ARCHIVENAME}
 endif
 libs: ${opengl_libs} gnome
+
+ifeq (${HAVE_GTKEXTRA},yes)
+libs: gtkextra
+endif
 
 opengl gtkextra gnome tools: force
 	$(MAKE) -C $@
@@ -127,6 +121,7 @@ install: force
            $(MAKE) -C opengl install; \
            $(MAKE) -C gnome install; \
            $(MAKE) -C tools install; \
+           $(MAKE) -C gtkextra install; \
 	   if [ ${BUILD_STATIC} = yes ]; then \
 	      $(CHMOD) ugo-w "${DESTDIR}$(alidir)/static"/*.ali; \
 	   fi; \
@@ -151,10 +146,6 @@ distclean: force
 	$(MAKE) -C gnome distclean
 	$(MAKE) -C tools distclean
 	-$(RM) Makefile.common
-
-## Find the list of bindings that are not up-to-date
-bindings_not_up_to_date:
-	@egrep -L "2.8.17|gtkextra 2.1.1|glib 2.10" *.ads | grep -v gtkada | grep -v b~ | grep -v dgate_callbacks
 
 ## Building the C files: they all depend on the c file in the source directory
 ## The dependencies on the .h files have to be given explicitly
