Remove GNOME support L125-027

--- a/src/Makefile.common.in
+++ b/src/Makefile.common.in
@@ -15,12 +15,11 @@ MINOR    = @GTKADA_MINOR_VERSION@
 MICRO    = @GTKADA_MICRO_VERSION@
 GTK_LIBS = @GTK_LIBS@
 HAVE_OPENGL   = @HAVE_OPENGL@
-HAVE_GNOME    = @HAVE_GNOME@
 HAVE_GTKEXTRA = @HAVE_GTKEXTRA@
 BUILD_TYPE      = @BUILD_TYPE@
 DEFAULT_LIBRARY_TYPE=@DEFAULT_LIBRARY_TYPE@
 
-GPR_BUILD=-XBUILD=${BUILD_TYPE} -XOPENGL=${HAVE_OPENGL} -XEXTRA=${HAVE_GTKEXTRA} -XGNOME=${HAVE_GNOME}
+GPR_BUILD=-XBUILD=${BUILD_TYPE} -XOPENGL=${HAVE_OPENGL} -XEXTRA=${HAVE_GTKEXTRA}
 
 CP = cp -p -f
 ifeq ($(OS),Windows_NT)
